Add sidebar and logo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up form</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="left">
+        <div class="logo-wrapper">
+            <img src="images/odin-lined.png" alt="Logo of Odin">
+            <h1 class="logo-text">ODIN</h1>
+        </div>
+    </div>
+    <div class="right">
+        
+    </div>
 </body>
 </html>
