--- a/index.html
+++ b/index.html
@@ -14,29 +14,31 @@
         </div>
     </div>
     <div class="right">
-        <h2 class="heading">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br>Sign up <em>now</em> to get started.</h2>
+        <h2 class="first heading">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br>Sign up <em>now</em> to get started.</h2>
         <h2 class="heading">You <em>know</em> you want to.</h2>
-        <form id="form" method="get">
-            <h2>Let's do this!</h2>
-            <div class="name">
-                <label for="first-name">FIRST NAME</label>
-                <input type="text" name="first-name" id="first-name" required>
-                <label for="last-name">LAST NAME</label>
-                <input type="text" name="last-name" id="last-name" required>
-            </div>
-            <div class="contact">
-                <label for="email">EMAIL</label>
-                <input type="email" name="email" id="email" required>
-                <label for="phone-number">PHONE NUMBER</label>
-                <input type="tel" name="phone-number" id="phone-number" required>
-            </div>
-            <div class="password">
-                <label for="password">PASSWORD</label>
-                <input type="password" name="password" id="password" required>
-                <label for="confirm-password">CONFIRM PASSWORD</label>
-                <input type="password" name="confirm-password" id="confirm-password" required>
-            </div>
-        </form>
+        <div class="form-wrapper">
+            <legend form="form">Let's do this!</legend>
+            <form id="form" method="get">
+                <div>
+                    <label for="first-name">FIRST NAME</label>
+                    <input type="text" name="first-name" id="first-name" required>
+                    <label for="email">EMAIL</label>
+                    <input type="email" name="email" id="email" required>
+                    <label for="password">PASSWORD</label>
+                    <input type="password" name="password" id="password" required>
+                    <span></span>
+                </div>
+                <div>
+                    <label for="last-name">LAST NAME</label>
+                    <input type="text" name="last-name" id="last-name" required>
+                    <label for="phone-number">PHONE NUMBER</label>
+                    <input type="tel" name="phone-number" id="phone-number" required>
+                    <label for="confirm-password">CONFIRM PASSWORD</label>
+                    <input type="password" name="confirm-password" id="confirm-password" required>
+                </div>
+                <div></div>
+            </form>
+        </div>
         <button type="submit" form="form">Create Account</button>
         <p>Already have an account? <a href="">Log in</a></p>
     </div>
